objects/Membrane_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Main_Object__c</fullName>
        <label>Main Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membrane_External_Data_Source__c</fullName>
        <label>Membrane External Data Source</label>
        <referenceTo>Membrane_External_Data_Source__c</referenceTo>
        <relationshipLabel>Membrane Definitions</relationshipLabel>
        <relationshipName>Membrane_Definitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Membrane_Notes__c</fullName>
        <label>Membrane Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Membrane__c</fullName>
        <label>Membrane</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sample_JSON__c</fullName>
        <label>Sample JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Membrane Definition</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Membrane Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membrane Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>